fixed vertical align of search input

--- a/css/index.css
+++ b/css/index.css
@@ -69,6 +69,7 @@ code {
 	padding: 0;
 	border-bottom-right-radius: 0;
 	border-top-right-radius: 0;
+	vertical-align: bottom;
 }
 @media (max-width: 560px) {
 	.container {
